k8s/deployments/loki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.7.1
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          ports:
            - containerPort: 3100
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 250M
            limits:
              cpu: 500m
              memory: 500M
          volumeMounts:
            - name: loki-config-volume
              mountPath: /etc/loki/
            - name: loki-storage-volume
              mountPath: /loki/
      volumes:
        - name: loki-config-volume
          configMap:
            defaultMode: 420
            name: loki
        - name: loki-storage-volume
          persistentVolumeClaim:
            claimName: loki-vol
