k8s/deployments/loki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  selector:
    app: loki
  type: ClusterIP
  ports:
    - name: loki
      protocol: TCP
      port: 3100
      targetPort: http
