k8s/deployments/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: loki.super001.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki
                port:
                  number: 3100
  tls:
  - hosts:
    - loki.super001.com
    secretName: loki-tls-ingress
